# klar

./: README.md  klar.spec  pyproject.toml
.github/workflows/: workflow.yml
src/klar/: __init__.py  _config.py  _monitor.py
src/klar/resources/: style-dark.css  style.css
